include/pan_cdefs.h

typedef const void cvoid_t;
typedef const char cchar_t;
typedef const uint8_t cuint8_t;
typedef const uint64_t cuint64_t;
typedef uint32_t PanError;
typedef uintptr_t PanUDPAddr;
typedef uintptr_t PanConn;
typedef uintptr_t PanListenConn;
typedef uintptr_t PanPath;
typedef uintptr_t PanPathFingerprint;
typedef uintptr_t PanPathInterface;
typedef uintptr_t PanPolicy;
typedef uintptr_t PanSelector;
typedef uintptr_t PanReplySelector;
typedef uintptr_t PanConnSockAdapter;
typedef uintptr_t PanListenSockAdapter;
/////////////////
// Async Read/Write
////////////////
typedef void (*OnCompletionWaker)( PanError );
////////////
// Policy //
////////////

typedef PanPath (*PanPolicyFilterFn)(PanPath* paths, size_t count, uintptr_t user);
//////////////
// Selector //
//////////////

typedef PanPath (*PanSelectorPathFn)(uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanSelectorInitializeFn)(
	PanUDPAddr local, PanUDPAddr remote, PanPath* paths, size_t count, uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanSelectorRefreshFn)(PanPath* paths, size_t count, uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanSelectorPathDownFn)(PanPathFingerprint pf, PanPathInterface pi, uintptr_t user);
typedef void (*PanSelectorClose)(uintptr_t user);
struct PanSelectorCallbacks
{
	PanSelectorPathFn       path;
	PanSelectorInitializeFn initialize;
	PanSelectorRefreshFn    refresh;
	PanSelectorPathDownFn   pathDown;
	PanSelectorClose        close;
};
///////////////////
// ReplySelector //
///////////////////

/// Handles must be deleted by callee.
typedef PanPath (*PanReplySelPathFn)(PanUDPAddr remote, uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanReplySelInitializeFn)(PanUDPAddr local, uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanReplySelRecordFn)(PanUDPAddr remote, PanPath path, uintptr_t user);
/// Handles must be deleted by callee.
typedef void (*PanReplySelPathDownFn)(PanPathFingerprint pf, PanPathInterface pi, uintptr_t user);
typedef void (*PanReplySelCloseFn)(uintptr_t user);
struct PanReplySelCallbacks
{
	PanReplySelPathFn       path;
	PanReplySelInitializeFn initialize;
	PanReplySelRecordFn     record;
	PanReplySelPathDownFn   pathDown;
	PanReplySelCloseFn      close;
};