rust/src/bindings.rs

pub type __clock_t = ::std::os::raw::c_long;
pub type __rlim_t = ::std::os::raw::c_ulong;
pub type __rlim64_t = ::std::os::raw::c_ulong;
pub type __id_t = ::std::os::raw::c_uint;
pub type __time_t = ::std::os::raw::c_long;
pub type __useconds_t = ::std::os::raw::c_uint;
pub type __suseconds_t = ::std::os::raw::c_long;
pub type __suseconds64_t = ::std::os::raw::c_long;
pub type __daddr_t = ::std::os::raw::c_int;
pub type __key_t = ::std::os::raw::c_int;
pub type __clockid_t = ::std::os::raw::c_int;
pub type __timer_t = *mut ::std::os::raw::c_void;
pub type __blksize_t = ::std::os::raw::c_long;
pub type __blkcnt_t = ::std::os::raw::c_long;
pub type __blkcnt64_t = ::std::os::raw::c_long;
pub type __fsblkcnt_t = ::std::os::raw::c_ulong;
pub type __fsblkcnt64_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt_t = ::std::os::raw::c_ulong;
pub type __fsfilcnt64_t = ::std::os::raw::c_ulong;
pub type __fsword_t = ::std::os::raw::c_long;
pub type __ssize_t = ::std::os::raw::c_long;
pub type __syscall_slong_t = ::std::os::raw::c_long;
pub type __syscall_ulong_t = ::std::os::raw::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut ::std::os::raw::c_char;
pub type __intptr_t = ::std::os::raw::c_long;
pub type __socklen_t = ::std::os::raw::c_uint;
pub type __sig_atomic_t = ::std::os::raw::c_int;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_long;
pub type int_fast32_t = ::std::os::raw::c_long;
pub type int_fast64_t = ::std::os::raw::c_long;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_ulong;
pub type uint_fast32_t = ::std::os::raw::c_ulong;
pub type uint_fast64_t = ::std::os::raw::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type cvoid_t = ::std::os::raw::c_void;
pub type cchar_t = ::std::os::raw::c_char;
pub type cuint8_t = u8;
pub type cuint64_t = u64;
pub type PanError = u32;
pub type PanUDPAddr = usize;
pub type PanConn = usize;
pub type PanListenConn = usize;
pub type PanScionSocket = usize;
pub type PanPath = usize;
pub type PanPathFingerprint = usize;
pub type PanPathInterface = usize;
pub type PanPolicy = usize;
pub type PanSelector = usize;
pub type PanReplySelector = usize;
pub type PanConnSockAdapter = usize;
pub type PanConnSSockAdapter = usize;
pub type PanListenSockAdapter = usize;
pub type PanListenSSockAdapter = usize;
pub type OnCompletionWaker =
    ::std::option::Option<unsafe extern "C" fn(arg1: *mut ::std::os::raw::c_void, arg2: PanError)>;
pub type PanPolicyFilterFn = ::std::option::Option<
    unsafe extern "C" fn(paths: *mut PanPath, count: usize, user: usize) -> PanPath,
>;
pub type PanSelectorPathFn = ::std::option::Option<unsafe extern "C" fn(user: usize) -> PanPath>;
#[doc = " Handles must be deleted by callee."]
pub type PanSelectorInitializeFn = ::std::option::Option<
    unsafe extern "C" fn(
        local: PanUDPAddr,
        remote: PanUDPAddr,
        paths: *mut PanPath,
        count: usize,
        user: usize,
    ),
>;
#[doc = " Handles must be deleted by callee."]
pub type PanSelectorRefreshFn =
    ::std::option::Option<unsafe extern "C" fn(paths: *mut PanPath, count: usize, user: usize)>;
#[doc = " Handles must be deleted by callee."]
pub type PanSelectorPathDownFn = ::std::option::Option<
    unsafe extern "C" fn(pf: PanPathFingerprint, pi: PanPathInterface, user: usize),
>;
pub type PanSelectorClose = ::std::option::Option<unsafe extern "C" fn(user: usize)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PanSelectorCallbacks {
    pub path: PanSelectorPathFn,
    pub initialize: PanSelectorInitializeFn,
    pub refresh: PanSelectorRefreshFn,
    pub pathDown: PanSelectorPathDownFn,
    pub close: PanSelectorClose,
}
#[test]
fn bindgen_test_layout_PanSelectorCallbacks() {
    const UNINIT: ::std::mem::MaybeUninit<PanSelectorCallbacks> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<PanSelectorCallbacks>(),
        40usize,
        concat!("Size of: ", stringify!(PanSelectorCallbacks))
    );
    assert_eq!(
        ::std::mem::align_of::<PanSelectorCallbacks>(),
        8usize,
        concat!("Alignment of ", stringify!(PanSelectorCallbacks))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).path) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PanSelectorCallbacks),
            "::",
            stringify!(path)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).initialize) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PanSelectorCallbacks),
            "::",
            stringify!(initialize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).refresh) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(PanSelectorCallbacks),
            "::",
            stringify!(refresh)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pathDown) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(PanSelectorCallbacks),
            "::",
            stringify!(pathDown)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).close) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(PanSelectorCallbacks),
            "::",
            stringify!(close)
        )
    );
}
#[doc = " Handles must be deleted by callee."]
pub type PanReplySelPathFn =
    ::std::option::Option<unsafe extern "C" fn(remote: PanUDPAddr, user: usize) -> PanPath>;
pub type PanReplySelInitializeFn =
    ::std::option::Option<unsafe extern "C" fn(local: u64, user: usize)>;
#[doc = " Handles must be deleted by callee."]
pub type PanReplySelRecordFn =
    ::std::option::Option<unsafe extern "C" fn(remote: PanUDPAddr, path: PanPath, user: usize)>;
#[doc = " Handles must be deleted by callee."]
pub type PanReplySelPathDownFn = ::std::option::Option<
    unsafe extern "C" fn(pf: PanPathFingerprint, pi: PanPathInterface, user: usize),
>;
pub type PanReplySelCloseFn = ::std::option::Option<unsafe extern "C" fn(user: usize)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PanReplySelCallbacks {
    pub path: PanReplySelPathFn,
    pub initialize: PanReplySelInitializeFn,
    pub record: PanReplySelRecordFn,
    pub pathDown: PanReplySelPathDownFn,
    pub close: PanReplySelCloseFn,
}
#[test]
fn bindgen_test_layout_PanReplySelCallbacks() {
    const UNINIT: ::std::mem::MaybeUninit<PanReplySelCallbacks> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<PanReplySelCallbacks>(),
        40usize,
        concat!("Size of: ", stringify!(PanReplySelCallbacks))
    );
    assert_eq!(
        ::std::mem::align_of::<PanReplySelCallbacks>(),
        8usize,
        concat!("Alignment of ", stringify!(PanReplySelCallbacks))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).path) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PanReplySelCallbacks),
            "::",
            stringify!(path)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).initialize) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(PanReplySelCallbacks),
            "::",
            stringify!(initialize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).record) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(PanReplySelCallbacks),
            "::",
            stringify!(record)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pathDown) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(PanReplySelCallbacks),
            "::",
            stringify!(pathDown)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).close) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(PanReplySelCallbacks),
            "::",
            stringify!(close)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _GoString_ {
    pub p: *const ::std::os::raw::c_char,
    pub n: isize,
}
#[test]
fn bindgen_test_layout__GoString_() {
    const UNINIT: ::std::mem::MaybeUninit<_GoString_> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<_GoString_>(),
        16usize,
        concat!("Size of: ", stringify!(_GoString_))
    );
    assert_eq!(
        ::std::mem::align_of::<_GoString_>(),
        8usize,
        concat!("Alignment of ", stringify!(_GoString_))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).p) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_GoString_),
            "::",
            stringify!(p)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).n) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_GoString_),
            "::",
            stringify!(n)
        )
    );
}
pub type GoInt8 = ::std::os::raw::c_schar;
pub type GoUint8 = ::std::os::raw::c_uchar;
pub type GoInt16 = ::std::os::raw::c_short;
pub type GoUint16 = ::std::os::raw::c_ushort;
pub type GoInt32 = ::std::os::raw::c_int;
pub type GoUint32 = ::std::os::raw::c_uint;
pub type GoInt64 = ::std::os::raw::c_longlong;
pub type GoUint64 = ::std::os::raw::c_ulonglong;
pub type GoInt = GoInt64;
pub type GoUint = GoUint64;
pub type GoUintptr = usize;
pub type GoFloat32 = f32;
pub type GoFloat64 = f64;
pub type GoComplex64 = __BindgenComplex<f32>;
pub type GoComplex128 = __BindgenComplex<f64>;
pub type _check_for_64_bit_pointer_matching_GoInt = [::std::os::raw::c_char; 1usize];
pub type GoString = _GoString_;
pub type GoMap = *mut ::std::os::raw::c_void;
pub type GoChan = *mut ::std::os::raw::c_void;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GoInterface {
    pub t: *mut ::std::os::raw::c_void,
    pub v: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_GoInterface() {
    const UNINIT: ::std::mem::MaybeUninit<GoInterface> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<GoInterface>(),
        16usize,
        concat!("Size of: ", stringify!(GoInterface))
    );
    assert_eq!(
        ::std::mem::align_of::<GoInterface>(),
        8usize,
        concat!("Alignment of ", stringify!(GoInterface))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).t) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(GoInterface),
            "::",
            stringify!(t)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).v) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(GoInterface),
            "::",
            stringify!(v)
        )
    );
}
